# wake

./: .gitignore  LICENSE  README.md  pyproject.toml
example/: .env  Makefile  Wakefile  base-py.Dockerfile
example/.wake/: a2s1.yml  a2s2.json  app1.json  base.yml
example/app1/: service1.Dockerfile  service2.Dockerfile
example/app2/: Dockerfile
src/wake_build/: __init__.py  __main__.py  config.py  docker.py  exc.py  log.py  util.py  wake.py
test/: test_config.py  test_wake.py
