[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wake-build"
version = "0.1.0"
description = "Wake container build orchestrator"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.scripts]
wake = "wake_build:main"
